# Spatial-AI

./: .pre-commit-config.yaml  README.md  Reefscape.ipynb  colab_yolo_training.ipynb  pyproject.toml  requirements.txt  run_inference.py  setup.bash  setup.bat
models/: yolov8n_2025-05-17_00-11-26.json  yolov8n_2025-05-17_00-11-26.xml
