[project]
name="Spatial-AI"
version="0.0.0"
description="OAK-D spatial AI for FRC"
requires-python = ">=3.11"

[build-system]
requires=["hatchling"]
build-backend="hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spatial-ai"]

[tool.black]
line-length = 120

[tool.pylint.main]
disable = [
    "line-too-long",
]